[package]
name = "rsql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
color-eyre = "0.6.2"
linefeed = "0.6.0"
prettytable = "0.10.0"
serde = { version = "1.0.175", features = ["derive"] }
sqlparser = "0.36.1"
