[package]
name = "rsql"
version = "0.0.1"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/takashiidobe/rsql"
description = "A toy SQL implementation"
documentation = "https://docs.rs/rsql"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
color-eyre = "0.6.2"
linefeed = "0.6.0"
prettytable = "0.10.0"
serde = { version = "1.0.175", features = ["derive"] }
sqlparser = "0.36.1"

[profile.release]
lto = true
strip = true
codegen-units = 1
